# zzacommon

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CppProperties.json  README.md
.github/: copilot-instructions.md
api/: CMakeLists.txt  Doxyfile.in
cmake/: API_DOCS_USAGE.md  PACKAGE_INIT_EXPLAINED.md  RUNTIME_DLL_USAGE.md  USAGE.md  fftw_helper.cmake  vcpkg_helper.cmake  zlib_vcpkg_helper.cmake  zzacommonConfig-build.cmake.in  zzacommonConfig.cmake.in  zzacommon_runtime_helpers.cmake
include/: banner.h  button_input.h  calendar.h  calendar_input.h  calendar_table.h  callback.h  drawing.h  file_holder.h  filename_input.h  graph.h  ident.h  input_hierch.h  password_input.h  settings.h  status.h  symbols.h  tabs_nonav.h  ticker.h  utils.h  zc_active_queue.h  zc_app.h  zc_async_deque.h  zc_async_queue.h  zc_audio.h  zc_audio_data.h  zc_banner.h  zc_button_dialog.h  zc_button_input.h  zc_calendar.h  zc_calendar_input.h  zc_calendar_table.h  zc_callback.h  zc_debug.h  zc_drawing.h  zc_fft.h  zc_file_holder.h  zc_file_viewer.h  zc_filename_input.h  zc_fltk.h  zc_graph.h  (+43 more)
pugixml/: CMakeLists.txt  pugiconfig.hpp
src/: banner.cpp  calendar.cpp  calendar_input.cpp  calendar_table.cpp  file_holder.cpp  graph.cpp  ident.cpp.in  settings.cpp  status.cpp  symbols.cpp  ticker.cpp  utils.cpp  zc_app.cpp  zc_app.cpp.in  zc_apps.cpp  zc_audio.cpp  zc_banner.cpp  zc_calendar.cpp  zc_calendar_input.cpp  zc_calendar_table.cpp  zc_debug.cpp  zc_debug.cpp.in  zc_fft.cpp  zc_file_holder.cpp  zc_file_viewer.cpp  zc_filename_input.cpp  zc_fltk.cpp  zc_graph.cpp  zc_graph_.cpp  zc_graph_axis.cpp  zc_graph_axis_linear.cpp  zc_graph_axis_linr.cpp  zc_graph_axis_linx.cpp  zc_graph_axis_linx0.cpp  zc_graph_axis_linxb.cpp  zc_graph_axis_linxt.cpp  zc_graph_axis_liny.cpp  zc_graph_axis_liny0.cpp  zc_graph_axis_linyl.cpp  zc_graph_axis_linyr.cpp  (+25 more)
tests/: CMakeLists.txt  test_graph_bar_horizontal.cpp  test_zoom_scroll_bar.cpp
